Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48439

Assertion failure using QSG_RENDERER_DEBUG=upload

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.7.0
    • 5.4.2
    • Quick: SceneGraph
    • None
    • Mac 10.10.5, Xcode 7
    • 893a4ffd6476a11597f9dd3c847fe3db4bf38eed

    Description

      In qtdeclarative, the following line in src/quick/scenegraph/coreapi/qsgbatchrenderer.cpp, inside Renderer::uploadBatch(Batch *), causes an assertion failure:

      (const quint16 *) (b->vbo.data + b->drawSets.at(0).indices);
      

      The reason: drawSets is empty.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            erb Jason Erb (Suitable Technologies)
            sparist Jason Erb
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes